--- a/springmvc_mybatis_demo/.settings/org.eclipse.wst.common.component
+++ b/springmvc_mybatis_demo/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="java-output-path" value="/springmvc_mybatis_demo/target/classes"/>
         <property name="context-root" value="springmvc_mybatis_demo"/>
     </wb-module>
